# kaivaa-builder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_app.py
assets/00_master/: master_template.xlsx
assets/projects/: cacao-testr.json  cacao.json  mbws.json
assets/registry/: gabarits.json
backend/: __init__.py  config.py
backend/connectors/: __init__.py  excel_connector.py
backend/core/: batch_processor.py  chart_handler.py  excel_handler.py  image_handler.py  ppt_handler.py
backend/database/: init_db.py  models.py
backend/generator/: __init__.py  config_generator.py  excel_generator.py  template_generator.py
backend/models/: __init__.py  custom_table.py  gabarits.py  template_config.py
backend/services/: __init__.py  database_service.py  dataset_service.py  excel_injection_service.py  gabarit_registry.py  project_service.py  report_service.py  template_service.py
backend/utils/: cleanup.py  excel_writer.py  file_utils.py
frontend/: Home.py
frontend/pages/: 0_🧱_Gabarits_de_table.py  1_📚_Bibliotheque.py  2_➕_Nouveau_Template.py  3_▶️_Generer_Rapport.py  4_📊_Detail_Livrable.py  5_📁_Projets.py  5a_📁_Projet_Detail.py  5b_🔧_Pipeline_Gabarit.py  6_🕘_Historique.py
frontend/utils/: ui_helpers.py
output/BCE_INPI_V2/: BCE_INPI_V2__20251003_1018.xlsx  BCE_INPI_V2_dsfh_sdfh_20251002_1924.xlsx  BCE_INPI_V2_sgfdsfg_sdfgsdfg_20251002_1831.xlsx  BCE_INPI_V2_zert_serg_20251002_1838.xlsx
output/INSEE_BCE/: INSEE_BCE_NA_R4_20251001_2139.xlsx  (+2 more)
templates/TEST3/: README.md  (+1 more)
tests/: test_excel_handler.py  test_template_service.py  test_utils.py
(+68 files in other folders)
